loading project info from YAML file

--- a/client/views/gallery.jade
+++ b/client/views/gallery.jade
@@ -9,7 +9,7 @@
         img(src='data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==', alt='First slide')
         .container
           .carousel-caption
-            h1 Example headline.
+            h1 #{projectData.headlines[0]}
             p
               | Note: If you&apos;re viewing this page via a 
               code file://
@@ -20,7 +20,7 @@
         img(src='data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==', alt='Second slide')
         .container
           .carousel-caption
-            h1 Another example headline.
+            h1 #{projectData.headlines[1]}
             p
               | Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
             p
@@ -29,7 +29,7 @@
         img(src='data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==', alt='Third slide')
         .container
           .carousel-caption
-            h1 One more for good measure.
+            h1 #{projectData.headlines[2]}
             p
               | Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
             p
