--- a/client/views/carousel.jade
+++ b/client/views/carousel.jade
@@ -32,18 +32,14 @@ html(lang='en')
                 span.icon-bar
                 span.icon-bar
                 span.icon-bar
-              a.navbar-brand(href='#') #{projectData.name}
+              a.navbar-brand(href='#') #{general.name}
             .navbar-collapse.collapse
               ul.nav.navbar-nav
                 li.active
                   a(href='#') Home
-                li
-                  a(href='#about') About
-                li
-                  a(href='#contact') Contact
                 li.dropdown
                   a.dropdown-toggle(href='#', data-toggle='dropdown')
-                    | Dropdown 
+                    | Services 
                     span.caret
                   ul.dropdown-menu(role='menu')
                     li
@@ -58,6 +54,27 @@ html(lang='en')
                       a(href='#') Separated link
                     li
                       a(href='#') One more separated link
+                li.dropdown
+                  a.dropdown-toggle(href='#', data-toggle='dropdown')
+                    | Projects 
+                    span.caret
+                  ul.dropdown-menu(role='menu')
+                    li
+                      a(href='#') Action
+                    li
+                      a(href='#') Another action
+                    li
+                      a(href='#') Something else here
+                    li.divider
+                    li.dropdown-header Nav header
+                    li
+                      a(href='#') Separated link
+                    li
+                      a(href='#') One more separated link
+                li
+                  a(href='#about') About
+                li
+                  a(href='#contact') Contact
     // Carousel
     // ==================================================
     include ./gallery.jade
