--- a/client/views/marketing.jade
+++ b/client/views/marketing.jade
@@ -1,60 +1,25 @@
-// Three columns of text below the carousel
-.row
-  .col-lg-4
-    img.img-circle(src='#{pathToImages}/circle.png', alt='Generic placeholder image', style='width: 140px; height: 140px;')
-    h2 Heading
-    p
-      | Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
-    p
-      a.btn.btn-default(href='#', role='button') View details &raquo;
-  // /.col-lg-4
-  .col-lg-4
-    img.img-circle(src='#{pathToImages}/circle.png', alt='Generic placeholder image', style='width: 140px; height: 140px;')
-    h2 Heading
-    p
-      | Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
-    p
-      a.btn.btn-default(href='#', role='button') View details &raquo;
-  // /.col-lg-4
-  .col-lg-4
-    img.img-circle(src='#{pathToImages}/circle.png', alt='Generic placeholder image', style='width: 140px; height: 140px;')
-    h2 Heading
-    p
-      | Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-    p
-      a.btn.btn-default(href='#', role='button') View details &raquo;
-  // /.col-lg-4
-// /.row
 // START THE FEATURETTES
+// FIXME: TODO: Use markdown so that newlines are correctly interpreted OR replace newlines w/ linebreaks
 hr.featurette-divider
-.row.featurette
-  .col-md-7
-    h2.featurette-heading
-      | First featurette heading. 
-      span.text-muted It&apos;ll blow your mind.
-    p.lead
-      | Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
-  .col-md-5
-    img.featurette-image.img-responsive(data-src='holder.js/500x500/auto', alt='Generic placeholder image')
-hr.featurette-divider
-.row.featurette
-  .col-md-5
-    img.featurette-image.img-responsive(data-src='holder.js/500x500/auto', alt='Generic placeholder image')
-  .col-md-7
-    h2.featurette-heading
-      | Oh yeah, it&apos;s that good. 
-      span.text-muted See for yourself.
-    p.lead
-      | Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
-hr.featurette-divider
-.row.featurette
-  .col-md-7
-    h2.featurette-heading
-      | And lastly, this one. 
-      span.text-muted Checkmate.
-    p.lead
-      | Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
-  .col-md-5
-    img.featurette-image.img-responsive(data-src='holder.js/500x500/auto', alt='Generic placeholder image')
+each item, index in general.services
+  if index%2 == 0
+    .row.featurette
+      .col-md-7
+        h2.featurette-heading
+          | #{item.heading}
+        p.lead
+          | #{item.text}
+      .col-md-5
+        img.featurette-image.img-responsive(data-src='holder.js/500x500/auto', alt='Generic placeholder image')
+  else
+    .row.featurette
+      .col-md-5
+        img.featurette-image.img-responsive(data-src='holder.js/500x500/auto', alt='Generic placeholder image')
+      .col-md-7
+        h2.featurette-heading
+          | #{item.heading}
+        p.lead
+          | #{item.text}
+  end
 hr.featurette-divider
 // /END THE FEATURETTES
