--- a/client/views/carousel.jade
+++ b/client/views/carousel.jade
@@ -8,8 +8,10 @@ html(lang='en')
     meta(name='author', content='')
     link(rel='icon', href='#{pathToAssets}/docs/favicon.ico')
     title Carousel Template for Bootstrap
-    // Bootstrap core CSS
-    link(href='#{pathToAssets}/dist/css/bootstrap.min.css', rel='stylesheet')
+    // Bootstrap core CSS - No Longer Loaded
+    // link(href='#{pathToAssets}/dist/css/bootstrap.min.css', rel='stylesheet')
+    // Bootstrap core CSS with LESS modifications
+    link(href='stylesheets/bootstrap_theme.css', rel='stylesheet')
     // Just for debugging purposes. Don't actually copy these 2 lines!
     //if lt IE 9
       script(src='#{pathToAssets}/docs/assets/js/ie8-responsive-file-warning.js')
@@ -17,8 +19,6 @@ html(lang='en')
     //if lt IE 9
       script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
       script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
-    // Custom styles for this template
-    link(href='#{pathToSelectedTemplateWithinBootstrap}/carousel.css', rel='stylesheet')
   // NAVBAR
   // ==================================================
   body
