--- a/client/stylesheets/carousel.less
+++ b/client/stylesheets/carousel.less
@@ -1,3 +1,5 @@
+@icon-font-path:          "../../bower_components/bootstrap/fonts/";
+
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
