--- a/client/stylesheets/bootstrap_theme.css
+++ b/client/stylesheets/bootstrap_theme.css
@@ -3184,7 +3184,7 @@ tbody.collapse.in {
   list-style: none;
   font-size: 14px;
   text-align: left;
-  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.5);
   border: 1px solid #cccccc;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -4137,8 +4137,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
-  border-color: #e7e7e7;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-color: rgba(238, 238, 238, 0.5);
 }
 .navbar-default .navbar-brand {
   color: #777777;
@@ -4163,7 +4163,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: #555555;
-  background-color: #e7e7e7;
+  background-color: rgba(238, 238, 238, 0.5);
 }
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
@@ -4183,12 +4183,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: #e7e7e7;
+  border-color: rgba(238, 238, 238, 0.5);
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
-  background-color: #e7e7e7;
+  background-color: rgba(238, 238, 238, 0.5);
   color: #555555;
 }
 @media (max-width: 767px) {
@@ -4204,7 +4204,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #555555;
-    background-color: #e7e7e7;
+    background-color: rgba(238, 238, 238, 0.5);
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover,
@@ -6285,6 +6285,8 @@ button.close {
     display: none !important;
   }
 }
+/* VARIABLES
+--------------------------------------------------*/
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
@@ -6295,7 +6297,6 @@ body {
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
-/* TODO: FIXME: Should not be overriding css file. Edit the LESS file and override relevant LESS variables for colors etc... */
 .navbar-wrapper {
   z-index: 15;
   position: fixed;
@@ -6310,18 +6311,9 @@ body {
   padding-right: 0px;
 }
 .navbar-static-top {
-  background-color: rgba(255, 255, 255, 0.5);
   border: none;
   padding-left: 15px;
   padding-right: 15px;
-}
-.navbar-inverse .navbar-nav > .active > a {
-  background-color: rgba(249, 38, 114, 0.75);
-}
-.navbar-inverse .navbar-nav > .open > a,
-.navbar-inverse .navbar-nav > .open > a:hover,
-.navbar-inverse .navbar-nav > .open > a:focus {
-  background-color: rgba(249, 38, 114, 0.75);
 }
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
