--- a/client/stylesheets/carousel.less
+++ b/client/stylesheets/carousel.less
@@ -1,4 +1,10 @@
+/* VARIABLES
+--------------------------------------------------*/
+
 @icon-font-path:          "../../bower_components/bootstrap/fonts/";
+
+@dropdown-bg: rgba( 255 , 255 , 255 , 0.50);
+@navbar-default-bg:  rgba( 255 , 255 , 255 , 0.50);
 
 /* GLOBAL STYLES
 -------------------------------------------------- */
@@ -13,7 +19,6 @@ body {
 -------------------------------------------------- */
 
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
-/* TODO: FIXME: Should not be overriding css file. Edit the LESS file and override relevant LESS variables for colors etc... */
 .navbar-wrapper {
   z-index: 15;
   position: fixed;
@@ -30,20 +35,20 @@ body {
 }
 
 .navbar-static-top {
-  background-color: rgba(255, 255, 255, 0.5);
+  // background-color: rgba(255, 255, 255, 0.5);
   border: none;
   padding-left: 15px;
   padding-right: 15px;
 }
 
-.navbar-inverse .navbar-nav>.active>a{
-  background-color: rgba(249, 38, 114, 0.75) 
-}
-.navbar-inverse .navbar-nav>.open>a, 
-.navbar-inverse .navbar-nav>.open>a:hover, 
-.navbar-inverse .navbar-nav>.open>a:focus {
-  background-color: rgba(249, 38, 114, 0.75) 
-}
+// .navbar-inverse .navbar-nav>.active>a{
+  // background-color: rgba(249, 38, 114, 0.75) 
+// }
+// .navbar-inverse .navbar-nav>.open>a, 
+// .navbar-inverse .navbar-nav>.open>a:hover, 
+// .navbar-inverse .navbar-nav>.open>a:focus {
+  // background-color: rgba(249, 38, 114, 0.75) 
+// }
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
