--- a/client/views/carousel.jade
+++ b/client/views/carousel.jade
@@ -24,7 +24,7 @@ html(lang='en')
   body
     .navbar-wrapper
       .container
-        .navbar.navbar-inverse.navbar-static-top(role='navigation')
+        .navbar.navbar-default.navbar-static-top(role='navigation')
           .container
             .navbar-header
               button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
