--- a/client/stylesheets/bootstrap_theme.css
+++ b/client/stylesheets/bootstrap_theme.css
@@ -901,12 +901,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #337ab7;
+  color: rgba(255, 180, 40, 0.75);
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #23527c;
+  color: rgba(218, 142, 0, 0.75);
   text-decoration: underline;
 }
 a:focus {
@@ -1139,10 +1139,10 @@ mark,
   color: #777777;
 }
 .text-primary {
-  color: #337ab7;
+  color: rgba(255, 180, 40, 0.75);
 }
 a.text-primary:hover {
-  color: #286090;
+  color: rgba(244, 159, 0, 0.75);
 }
 .text-success {
   color: #3c763d;
@@ -1170,10 +1170,10 @@ a.text-danger:hover {
 }
 .bg-primary {
   color: #fff;
-  background-color: #337ab7;
+  background-color: rgba(255, 180, 40, 0.75);
 }
 a.bg-primary:hover {
-  background-color: #286090;
+  background-color: rgba(244, 159, 0, 0.75);
 }
 .bg-success {
   background-color: #dff0d8;
@@ -2832,8 +2832,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: rgba(255, 180, 40, 0.75);
+  border-color: rgba(255, 171, 14, 0.75);
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -2842,8 +2842,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: rgba(244, 159, 0, 0.75);
+  border-color: rgba(208, 136, 0, 0.75);
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -2868,11 +2868,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: rgba(255, 180, 40, 0.75);
+  border-color: rgba(255, 171, 14, 0.75);
 }
 .btn-primary .badge {
-  color: #337ab7;
+  color: rgba(255, 180, 40, 0.75);
   background-color: #ffffff;
 }
 .btn-success {
@@ -3056,7 +3056,7 @@ fieldset[disabled] .btn-danger.active {
   background-color: #ffffff;
 }
 .btn-link {
-  color: #337ab7;
+  color: rgba(255, 180, 40, 0.75);
   font-weight: normal;
   border-radius: 0;
 }
@@ -3077,7 +3077,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #23527c;
+  color: rgba(218, 142, 0, 0.75);
   text-decoration: underline;
   background-color: transparent;
 }
@@ -3223,7 +3223,7 @@ tbody.collapse.in {
   color: #ffffff;
   text-decoration: none;
   outline: 0;
-  background-color: #337ab7;
+  background-color: rgba(255, 180, 40, 0.75);
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
@@ -3649,7 +3649,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #337ab7;
+  border-color: rgba(255, 180, 40, 0.75);
 }
 .nav .nav-divider {
   height: 1px;
@@ -3742,7 +3742,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #337ab7;
+  background-color: rgba(255, 180, 40, 0.75);
 }
 .nav-stacked > li {
   float: none;
@@ -4368,7 +4368,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   line-height: 1.42857143;
   text-decoration: none;
-  color: #337ab7;
+  color: rgba(255, 180, 40, 0.75);
   background-color: #ffffff;
   border: 1px solid #dddddd;
   margin-left: -1px;
@@ -4388,7 +4388,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-  color: #23527c;
+  color: rgba(218, 142, 0, 0.75);
   background-color: #eeeeee;
   border-color: #dddddd;
 }
@@ -4400,8 +4400,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > span:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: rgba(255, 180, 40, 0.75);
+  border-color: rgba(255, 180, 40, 0.75);
   cursor: default;
 }
 .pagination > .disabled > span,
@@ -4516,11 +4516,11 @@ a.label:focus {
   background-color: #5e5e5e;
 }
 .label-primary {
-  background-color: #337ab7;
+  background-color: rgba(255, 180, 40, 0.75);
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #286090;
+  background-color: rgba(244, 159, 0, 0.75);
 }
 .label-success {
   background-color: #5cb85c;
@@ -4583,7 +4583,7 @@ a.badge:focus {
 }
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #337ab7;
+  color: rgba(255, 180, 40, 0.75);
   background-color: #ffffff;
 }
 .list-group-item > .badge {
@@ -4654,7 +4654,7 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #337ab7;
+  border-color: rgba(255, 180, 40, 0.75);
 }
 .thumbnail .caption {
   padding: 9px;
@@ -4768,7 +4768,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #ffffff;
   text-align: center;
-  background-color: #337ab7;
+  background-color: rgba(255, 180, 40, 0.75);
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -4909,8 +4909,8 @@ a.list-group-item:focus {
 .list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: rgba(255, 180, 40, 0.75);
+  border-color: rgba(255, 180, 40, 0.75);
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -4926,7 +4926,7 @@ a.list-group-item:focus {
 .list-group-item.active .list-group-item-text,
 .list-group-item.active:hover .list-group-item-text,
 .list-group-item.active:focus .list-group-item-text {
-  color: #c7ddef;
+  color: rgba(255, 251, 244, 0.75);
 }
 .list-group-item-success {
   color: #3c763d;
@@ -5270,22 +5270,22 @@ a.list-group-item-danger.active:focus {
   border-bottom-color: #dddddd;
 }
 .panel-primary {
-  border-color: #337ab7;
+  border-color: rgba(255, 180, 40, 0.75);
 }
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: rgba(255, 180, 40, 0.75);
+  border-color: rgba(255, 180, 40, 0.75);
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #337ab7;
+  border-top-color: rgba(255, 180, 40, 0.75);
 }
 .panel-primary > .panel-heading .badge {
-  color: #337ab7;
+  color: rgba(255, 180, 40, 0.75);
   background-color: #ffffff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #337ab7;
+  border-bottom-color: rgba(255, 180, 40, 0.75);
 }
 .panel-success {
   border-color: #d6e9c6;
@@ -6333,11 +6333,16 @@ body {
   background-color: #777;
 }
 .carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 2048px;
+  /* Set up proportionate scaling */
   width: 100%;
   height: auto;
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 /* MARKETING CONTENT
 -------------------------------------------------- */
