--- a/client/stylesheets/carousel.less
+++ b/client/stylesheets/carousel.less
@@ -6,6 +6,9 @@
 @dropdown-bg: rgba( 255 , 255 , 255 , 0.50);
 @navbar-default-bg:  rgba( 255 , 255 , 255 , 0.50);
 
+@brand-primary: rgba( 255 , 180 , 40, 0.75);
+
+
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
@@ -71,11 +74,18 @@ body {
   background-color: #777;
 }
 .carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 2048px;
+	
+  /* Set up proportionate scaling */
   width: 100%;
   height: auto;
+	
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 
