--- a/client/views/index.jade
+++ b/client/views/index.jade
@@ -76,25 +76,13 @@ html(lang='en')
                 li
                   a(href='#contact') Contact
     // Carousel
-    // ==================================================
     include ./gallery.jade
-    // /.carousel
     
     // Marketing messaging and featurettes
-    // ==================================================
-    // Wrap the rest of the page in another container to center all the content.
     .container.marketing
       include ./marketing.jade
-      // FOOTER
-      footer
-        p.pull-right
-          a(href='#') Back to top
-        p
-          | &copy; 2014 Company, Inc. &middot; 
-          a(href='#') Privacy
-          |  &middot; 
-          a(href='#') Terms
-    // /.container
+      // footer
+      include ./footer.jade
     
     // Bootstrap core JavaScript
     // ==================================================
