--- a/client/views/projects.jade
+++ b/client/views/projects.jade
@@ -1,4 +1,4 @@
-// START THE FEATURETTES
+// START THE PROJECTS
 // FIXME: TODO: Use markdown so that newlines are correctly interpreted OR replace newlines w/ linebreaks
 hr.featurette-divider
 each item, index in general.services
@@ -23,4 +23,4 @@ each item, index in general.services
           | #{item.text}
     hr.featurette-divider
   end
-// /END THE FEATURETTES
+// /END THE PROJECTS
