--- a/client/views/footer.jade
+++ b/client/views/footer.jade
@@ -1,8 +1,9 @@
-footer
-  p.pull-right
-    a(href='#') Back to top
-  p
-    | &copy; 2014 Company, Inc. &middot; 
-    a(href='#') Privacy
-    |  &middot; 
-    a(href='#') Terms
+.container
+  footer
+    p.pull-right
+      a(href='#') Back to top
+    p
+      | &copy; 2014 Company, Inc. &middot; 
+      a(href='#') Privacy
+      |  &middot; 
+      a(href='#') Terms
