--- a/client/views/index.jade
+++ b/client/views/index.jade
@@ -1,92 +1,8 @@
-doctype html
-html(lang='en')
-  head
-    meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    meta(name='description', content='')
-    meta(name='author', content='')
-    link(rel='icon', href='#{pathToAssets}/docs/favicon.ico')
-    title Carousel Template for Bootstrap
-    // Bootstrap core CSS - No Longer Loaded
-    // link(href='#{pathToAssets}/dist/css/bootstrap.min.css', rel='stylesheet')
-    // Bootstrap core CSS with LESS modifications
-    link(href='stylesheets/bootstrap_theme.css', rel='stylesheet')
-    // Just for debugging purposes. Don't actually copy these 2 lines!
-    //if lt IE 9
-      script(src='#{pathToAssets}/docs/assets/js/ie8-responsive-file-warning.js')
-    // HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries
-    //if lt IE 9
-      script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
-      script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
-  // NAVBAR
-  // ==================================================
-  body
-    .navbar-wrapper
-      .container
-        .navbar.navbar-default.navbar-static-top(role='navigation')
-          .container
-            .navbar-header
-              button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-                span.sr-only Toggle navigation
-                span.icon-bar
-                span.icon-bar
-                span.icon-bar
-              a.navbar-brand(href='#') #{general.name}
-            .navbar-collapse.collapse
-              ul.nav.navbar-nav
-                li.active
-                  a(href='#') Home
-                li.dropdown
-                  a.dropdown-toggle(href='#', data-toggle='dropdown')
-                    | Services 
-                    span.caret
-                  ul.dropdown-menu(role='menu')
-                    li
-                      a(href='#') Action
-                    li
-                      a(href='#') Another action
-                    li
-                      a(href='#') Something else here
-                    li.divider
-                    li.dropdown-header Nav header
-                    li
-                      a(href='#') Separated link
-                    li
-                      a(href='#') One more separated link
-                li.dropdown
-                  a.dropdown-toggle(href='#', data-toggle='dropdown')
-                    | Projects 
-                    span.caret
-                  ul.dropdown-menu(role='menu')
-                    li
-                      a(href='#') Action
-                    li
-                      a(href='#') Another action
-                    li
-                      a(href='#') Something else here
-                    li.divider
-                    li.dropdown-header Nav header
-                    li
-                      a(href='#') Separated link
-                    li
-                      a(href='#') One more separated link
-                li
-                  a(href='#about') About
-                li
-                  a(href='#contact') Contact
-    // Carousel
-    include ./gallery.jade
-    
-    // Marketing messaging and featurettes
-    .container.marketing
-      include ./marketing.jade
-      // footer
-      include ./footer.jade
-    
-    // Bootstrap core JavaScript
-    // ==================================================
-    // Placed at the end of the document so the pages load faster
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
-    script(src='#{pathToAssets}/dist/js/bootstrap.min.js')
-    script(src='/js/holder.js')
+extends layout.jade
+
+block content
+  // Carousel
+  include ./gallery.jade
+
+  // Marketing messaging and featurettes
+  include ./marketing.jade
