added additional content, tweaked LESS

--- a/client/stylesheets/bootstrap_theme.css
+++ b/client/stylesheets/bootstrap_theme.css
@@ -6325,6 +6325,7 @@ body {
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
+  color: #444;
   z-index: 10;
 }
 /* Declare heights because of positioning of img element */
