--- a/client/stylesheets/carousel.less
+++ b/client/stylesheets/carousel.less
@@ -65,6 +65,7 @@ body {
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
+  color: #444;
   z-index: 10;
 }
 
