--- a/client/views/layout.jade
+++ b/client/views/layout.jade
@@ -7,7 +7,7 @@ html(lang='en')
     meta(name='description', content='')
     meta(name='author', content='')
     link(rel='icon', href='#{pathToAssets}/docs/favicon.ico')
-    title Carousel Template for Bootstrap
+    title Fox-Bear
     // Bootstrap core CSS - No Longer Loaded
     // link(href='#{pathToAssets}/dist/css/bootstrap.min.css', rel='stylesheet')
     // Bootstrap core CSS with LESS modifications
