--- a/client/views/navbar.jade
+++ b/client/views/navbar.jade
@@ -33,6 +33,6 @@
                       li
                         a(href='./projects#'+project.name) #{project.heading}
             li
-              a(href='about') About
+              a(href='/about') About
             li
-              a(href='contact') Contact
+              a(href='/contact') Contact
