--- a/client/stylesheets/carousel.less
+++ b/client/stylesheets/carousel.less
@@ -89,7 +89,12 @@ body {
   left: 0;
 }
 
-
+.carousel-control.left {
+  background-image: none;
+}
+.carousel-control.right {
+  background-image: none;
+}
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
@@ -128,7 +133,9 @@ body {
   letter-spacing: -1px;
 }
 
-
+.featurette-image {
+  padding-top: 28%;
+}
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
