--- a/client/views/footer.jade
+++ b/client/views/footer.jade
@@ -3,7 +3,7 @@
     p.pull-right
       a(href='#') Back to top
     p
-      | &copy; 2014 Company, Inc. &middot; 
+      | &copy; 2014 Fox-Bear, Inc. &middot; 
       a(href='#') Privacy
       |  &middot; 
       a(href='#') Terms
