updated content and LESS

--- a/client/views/contact.jade
+++ b/client/views/contact.jade
@@ -4,6 +4,6 @@ block content
   .container
     hr.featurette-divider
     .row.featurette
-      h1
-        a(href=general.contact) #{general.contact}
+      h1.contact
+        a(href="mailto:"+general.contact+"?Subject=Hello%20Fox-Bear") #{general.contact}
     hr.featurette-divider
