--- a/client/stylesheets/bootstrap_theme.css
+++ b/client/stylesheets/bootstrap_theme.css
@@ -3184,7 +3184,7 @@ tbody.collapse.in {
   list-style: none;
   font-size: 14px;
   text-align: left;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.75);
   border: 1px solid #cccccc;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -4137,8 +4137,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: rgba(255, 255, 255, 0.5);
-  border-color: rgba(238, 238, 238, 0.5);
+  background-color: rgba(255, 255, 255, 0.75);
+  border-color: rgba(238, 238, 238, 0.75);
 }
 .navbar-default .navbar-brand {
   color: #777777;
@@ -4163,7 +4163,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: #555555;
-  background-color: rgba(238, 238, 238, 0.5);
+  background-color: rgba(238, 238, 238, 0.75);
 }
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
@@ -4183,12 +4183,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: rgba(238, 238, 238, 0.5);
+  border-color: rgba(238, 238, 238, 0.75);
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
-  background-color: rgba(238, 238, 238, 0.5);
+  background-color: rgba(238, 238, 238, 0.75);
   color: #555555;
 }
 @media (max-width: 767px) {
@@ -4204,7 +4204,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #555555;
-    background-color: rgba(238, 238, 238, 0.5);
+    background-color: rgba(238, 238, 238, 0.75);
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover,
@@ -6294,6 +6294,10 @@ body {
   padding-bottom: 40px;
   color: #5a5a5a;
 }
+h1.category-heading {
+  padding-top: 100px;
+  color: rgba(220, 220, 220, 0.75);
+}
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
@@ -6346,10 +6350,12 @@ body {
   left: 0;
 }
 .carousel-control.left {
-  background-image: none;
+  background-image: linear-gradient(to right, #ffffff 40%, rgba(0, 0, 0, 0.0001));
+  width: 400px;
 }
 .carousel-control.right {
-  background-image: none;
+  background-image: linear-gradient(to left, #ffffff 40%, rgba(0, 0, 0, 0.0001));
+  width: 400px;
 }
 /* MARKETING CONTENT
 -------------------------------------------------- */
@@ -6373,7 +6379,7 @@ body {
 /* Featurettes
 ------------------------- */
 .featurette-divider {
-  margin: 80px 0;
+  margin: 30px 0;
   /* Space out the Bootstrap <hr> more */
 }
 /* Thin out the marketing headings */
@@ -6384,6 +6390,10 @@ body {
 }
 .featurette-image {
   padding-top: 28%;
+}
+h1.contact {
+  margin-top: 20%;
+  margin-bottom: 20%;
 }
 /* RESPONSIVE CSS
 -------------------------------------------------- */
