--- a/client/stylesheets/carousel.less
+++ b/client/stylesheets/carousel.less
@@ -3,8 +3,8 @@
 
 @icon-font-path:          "../../bower_components/bootstrap/fonts/";
 
-@dropdown-bg: rgba( 255 , 255 , 255 , 0.50);
-@navbar-default-bg:  rgba( 255 , 255 , 255 , 0.50);
+@dropdown-bg: rgba( 255 , 255 , 255 , 0.75);
+@navbar-default-bg:  rgba( 255 , 255 , 255 , 0.75);
 
 @brand-primary: rgba( 255 , 180 , 40, 0.75);
 
@@ -18,6 +18,10 @@ body {
   color: #5a5a5a;
 }
 
+h1.category-heading {
+  padding-top: 100px;
+  color: rgba(220, 220, 220, 0.75);
+}
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
 
@@ -90,10 +94,12 @@ body {
 }
 
 .carousel-control.left {
-  background-image: none;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 1.0) 40%, rgba(0, 0, 0, 0.0001) );
+  width: 400px;
 }
 .carousel-control.right {
-  background-image: none;
+   background-image: linear-gradient(to left, rgba(255, 255, 255, 1.0) 40%, rgba(0, 0, 0, 0.0001) );
+   width: 400px;
 }
 
 /* MARKETING CONTENT
@@ -123,7 +129,7 @@ body {
 ------------------------- */
 
 .featurette-divider {
-  margin: 80px 0; /* Space out the Bootstrap <hr> more */
+  margin: 30px 0; /* Space out the Bootstrap <hr> more */
 }
 
 /* Thin out the marketing headings */
@@ -137,6 +143,10 @@ body {
   padding-top: 28%;
 }
 
+h1.contact{
+  margin-top: 20%;
+  margin-bottom: 20%;
+}
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
