--- a/client/stylesheets/carousel.less
+++ b/client/stylesheets/carousel.less
@@ -75,31 +75,19 @@ h1.category-heading {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 960px;
-  background-color: #777;
+  height: 768px;
+  background-color: #FFF;
 }
 .carousel-inner > .item > img {
-  /* Set rules to fill background */
-  min-height: 100%;
-  min-width: 2048px;
-	
-  /* Set up proportionate scaling */
   width: 100%;
   height: auto;
-	
-  /* Set up positioning */
-  position: fixed;
-  top: 0;
-  left: 0;
 }
 
 .carousel-control.left {
   background-image: linear-gradient(to right, rgba(255, 255, 255, 1.0) 40%, rgba(0, 0, 0, 0.0001) );
-  width: 400px;
 }
 .carousel-control.right {
    background-image: linear-gradient(to left, rgba(255, 255, 255, 1.0) 40%, rgba(0, 0, 0, 0.0001) );
-   width: 400px;
 }
 
 /* MARKETING CONTENT
