--- a/client/stylesheets/carousel.less
+++ b/client/stylesheets/carousel.less
@@ -81,6 +81,11 @@ h1.category-heading {
 .carousel-inner > .item > img {
   width: 100%;
   height: auto;
+  position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
 }
 
 .carousel-control.left {
